objects/Salary__c.object
<CustomObject>
    <description>Salary of the applicant</description>
    <fields>
        <fullName>Max_Salary__c</fullName>
        <label>Max Salary</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Salary__c</fullName>
        <label>Min Salary</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <description>Relationship btwn vacancy and salary</description>
        <label>Vacancy</label>
        <referenceTo>Vacancy__c</referenceTo>
        <relationshipLabel>Salaries</relationshipLabel>
        <relationshipName>Salaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Salary</label>
    <nameField>
        <label>Salary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Minimum_salary_rule</fullName>
        <active>true</active>
        <description>Minimum salary can never exceed maximum salary</description>
        <errorConditionFormula>Min_Salary__c  &gt;  Max_Salary__c</errorConditionFormula>
        <errorDisplayField>Min_Salary__c</errorDisplayField>
        <errorMessage>Minimum salary cannot exceed maximum salary</errorMessage>
    </validationRules>
</CustomObject>